XigmaNAS® 13.1.0.5 - Glowpanel
-------------------------
Changes:
- Upgrade to FreeBSD 13.1-RELEASE P0.
- Upgrade syncthing to v1.20.2.
- Upgrade tmux to v3.3a.
- Upgrade lighttpd to v1.4.65.
- Upgrade sudo to v1.9.11p3.
- Upgrade python to v3.9.13.
- Upgrade php to v8.1.8.
- Upgrade virtualbox-ose to v6.1.36.
- Upgrade nano to v6.4.
- Upgrade cdialog to v1.3-20220728.
- Upgrade nut to v2022.08.01.
- Upgrade rrdtool to v1.8.0.
- Upgrade proftpd to v1.3.7e.
- Upgrade rsync to v3.2.5.
- Upgrade syncthing to v1.20.4.

Fixes:
- fix bring up lighttpd at all times.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.
- AFP shares with TimeMachine support are limited to max. 4 shares.
- Upgrade php to 8.0.13.
Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode.
- All services using IPv6 address. (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share.
- Need to write an online-test procedure.

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.
