@@ -1,3 +1,3 @@
-TIMESTAMP = 1648107752
-SHA256 (tzdata2022a.tar.gz) = ef7fffd9f4f50f4f58328b35022a32a5a056b245c5cb3d6791dddb342f871664
-SIZE (tzdata2022a.tar.gz) = 425833
+TIMESTAMP = 1661010585
+SHA256 (tzdata2022c.tar.gz) = 6974f4e348bf2323274b56dff9e7500247e3159eaa4b485dfa0cd66e75c14bfe
+SIZE (tzdata2022c.tar.gz) = 432721
